--- a/Index.html
+++ b/Index.html
@@ -1,26 +1,27 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Registro de pago de la tarjeta estudiantil 001</title>
-  <link rel="preconnect" href="https:                        
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https:                                                                                
-  <style>
-    body {
-      background-color:#451e97         
-    }
-    h1 {
-      font-family: 'Anonymous Pro', monospace;
-      color:#FFB733         
-    }
-    img {
-      width: 100%;
-      height: auto;
-    }
-  </style>
-</head>
-<body>
-  <h1>Registro de pago de la tarjeta estudiantil 001</h1>
-  <img src="https://i.pinimg.com/736x/df/14/80/df148083b4686cb54e27088c04e33c36.jpg" alt="Imagen de pago">
-</body>
+<!DOCTYPE html> 
+<html> 
+<head> 
+  <title>Registro de pago de la tarjeta estudiantil 001</title> 
+  <link rel="preconnect" href="https:                         
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+  <link href="https:                                                                                 
+  <style> 
+    body { 
+      background-color:        
+    } 
+    h1 { 
+      font-family: 'Anonymous Pro', monospace; 
+      color:        
+    } 
+    img { 
+      width: 100%; 
+      height: auto; 
+    } 
+  </style> 
+</head> 
+<body> 
+  <h1>Registro de pago de la tarjeta estudiantil 001</h1> 
+  <img src="https://i.pinimg.com/736x/df/14/80/df148083b4686cb54e27088c04e33c36.jpg" alt="Imagen de pago"> 
+  <p>Este es un registro de pago de la tarjeta estudiantil 001. Por favor, verifique la información antes de realizar cualquier pago.</p> 
+</body> 
 </html>
