--- a/Index.html
+++ b/Index.html
@@ -7,11 +7,11 @@
   <link href="https:                                                                                 
   <style> 
     body { 
-      background-color:        
+      background-color:#451e97        
     } 
     h1 { 
       font-family: 'Anonymous Pro', monospace; 
-      color:        
+      color:#FFB733        
     } 
     img { 
       width: 100%; 
