--- a/Index.html
+++ b/Index.html
@@ -1,27 +1,38 @@
-<!DOCTYPE html> 
-<html> 
-<head> 
-  <title>Registro de pago de la tarjeta estudiantil 001</title> 
-  <link rel="preconnect" href="https:                         
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-  <link href="https:                                                                                 
-  <style> 
-    body { 
-      background-color:#451e97        
-    } 
-    h1 { 
-      font-family: 'Anonymous Pro', monospace; 
-      color:#FFB733        
-    } 
-    img { 
-      width: 100%; 
-      height: auto; 
-    } 
-  </style> 
-</head> 
-<body> 
-  <h1>Registro de pago de la tarjeta estudiantil 001</h1> 
-  <img src="https://i.pinimg.com/736x/df/14/80/df148083b4686cb54e27088c04e33c36.jpg" alt="Imagen de pago"> 
-  <p>Este es un registro de pago de la tarjeta estudiantil 001. Por favor, verifique la información antes de realizar cualquier pago.</p> 
-</body> 
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Registro de pago de la tarjeta estudiantil 001</title>
+  
+  <!-- Enlaces corregidos para Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap" rel="stylesheet">
+  
+  <style>
+    body {
+      background-color: #451e97;
+      font-family: 'Anonymous Pro', monospace;
+      color: #FFB733;
+      padding: 20px;
+    }
+    h1 {
+      font-size: 24px;
+    }
+    img {
+      width: 100%;
+      height: auto;
+      margin-top: 20px;
+    }
+    p {
+      font-size: 18px;
+      margin-top: 20px;
+    }
+  </style>
+</head>
+<body>
+  <h1>Registro de pago de la tarjeta estudiantil 001</h1>
+  <img src="https://i.pinimg.com/736x/df/14/80/df148083b4686cb54e27088c04e33c36.jpg" alt="Imagen de pago">
+  <p>Este es un registro de pago de la tarjeta estudiantil 001. Por favor, verifique la información antes de realizar cualquier pago.</p>
+</body>
 </html>
