--- a/Index.html
+++ b/Index.html
@@ -1,39 +1,85 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Registro de pago de la tarjeta estudiantil 001</title>
-  
-  <!-- Enlaces corregidos para Google Fonts -->
+  <title>Registro de pago – Tarjeta Estudiantil</title>
+
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap" rel="stylesheet">
-  
+
   <style>
     body {
       background-color: #451e97;
       font-family: 'Anonymous Pro', monospace;
       color: #FFB733;
       padding: 20px;
+      margin: 0;
     }
+
+    .container {
+      max-width: 420px;
+      margin: 0 auto;
+      background-color: rgba(0, 0, 0, 0.15);
+      padding: 24px;
+      border-radius: 12px;
+      text-align: center;
+    }
+
     h1 {
-      font-size: 24px;
+      font-size: 20px;
+      margin-bottom: 16px;
     }
-    img {
-      width: 100%;
+
+    .codigo {
+      font-size: 16px;
+      opacity: 0.9;
+      margin-bottom: 24px;
+    }
+
+    .estado-img {
+      width: 120px;
       height: auto;
-      margin-top: 20px;
+      margin: 0 auto 16px;
+      display: block;
     }
-    p {
-      font-size: 18px;
-      margin-top: 20px;
+
+    .estado-texto {
+      font-size: 22px;
+      font-weight: bold;
+      margin-bottom: 24px;
+    }
+
+    .descripcion {
+      font-size: 14px;
+      line-height: 1.5;
+      opacity: 0.9;
     }
   </style>
 </head>
 <body>
-  <h1>Registro de pago de la tarjeta estudiantil 001</h1>
-  <img src="https://i.pinimg.com/736x/df/14/80/df148083b4686cb54e27088c04e33c36.jpg" alt="Imagen de pago">
-  <p>Este es un registro de pago de la tarjeta estudiantil 001. Por favor, verifique la información antes de realizar cualquier pago.</p>
+
+  <div class="container">
+    <h1>Registro de pago</h1>
+
+    <div class="codigo">
+      Tarjeta estudiantil 001
+    </div>
+
+    <!-- IMAGEN DE ESTADO -->
+    <img src="img/check.png" alt="Estado de pago" class="estado-img">
+
+    <!-- TEXTO DE ESTADO -->
+    <div class="estado-texto">
+      PAGADO
+    </div>
+
+    <p class="descripcion">
+      Este comprobante indica el estado actual de la tarjeta estudiantil.
+      Si tenés dudas o necesitás regularizar tu situación, comunicate con la administración.
+    </p>
+  </div>
+
 </body>
 </html>
-
